--- a/index.html
+++ b/index.html
@@ -8,51 +8,51 @@
 	<body>
 		<div class="container">
 			<div class="row">
-			  <div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l4">4</div>
-				<div class="col l6">6</div>
+			  <div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l4">4</div>
+				<div class="l6">6</div>
 			</div>
 
 			<div class="row">
-			  <div class="col l3">3</div>
-				<div class="col l3">3</div>
-				<div class="col l6">6</div>
+			  <div class="l3">3</div>
+				<div class="l3">3</div>
+				<div class="l6">6</div>
 			</div>
 
 			<div class="row">
-				<div class="col l5">5</div>
-				<div class="col l7">7</div>
+				<div class="l5">5</div>
+				<div class="l7">7</div>
 			</div>
 
 			<div class="row">
-					<div class="col l9">9</div>
-					<div class="col l3">3</div>
+					<div class="l9">9</div>
+					<div class="l3">3</div>
 			</div>
 
 			<div class="row">
-				<div class="col l2">2</div>
-				<div class="col l10">10</div>
+				<div class="l2">2</div>
+				<div class="l10">10</div>
 			</div>
 
 			<div class="row">
-				<div class="col l11">11</div>
-				<div class="col l1">1</div>
+				<div class="l11">11</div>
+				<div class="l1">1</div>
 			</div>
 
 			<div class="row">
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
-				<div class="col l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
+				<div class="l1">1</div>
 			</div>
 		</div>
 	</body>
